<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
android:background="#f5e9e9"
    android:padding="5dp"

    tools:ignore="PrivateResource">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:scaleType="fitCenter"
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="4dp"
                android:padding="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,RtlHardcoded" />


            <LinearLayout

                android:background="@drawable/unnamed"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginBottom="36dp"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/image"
                app:layout_constraintEnd_toEndOf="@+id/image"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="@+id/image">


                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:paddingTop="4dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_comment_black_24dp"
                    tools:ignore="ContentDescription">

                </ImageButton>

                <TextView
                    android:id="@+id/time_published_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/published"
                    android:textSize="16sp"
                    android:textColor="#fff">

                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/author_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/author"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <TextView
                android:id="@+id/title_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/title"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_details" />

            <TextView
                android:gravity="center"
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:layout_marginBottom="12dp"
                android:padding="6dp"
                android:text="@string/detail"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_details" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:padding="4dp"
        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
        android:layout_height="match_parent">
        <WebView
            android:id="@+id/web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </WebView>
    </LinearLayout>
</LinearLayout>
</ScrollView>
