<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f7d9d7"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="4dp"
    tools:ignore="PrivateResource">



        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:id="@+id/card_row"
            app:cardBackgroundColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="#ffff"
            android:elevation="4dp"
            android:padding="5dp"
            app:cardCornerRadius="10dp"
            tools:targetApi="lollipop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_gravity="center">


                <ImageView

                    android:id="@+id/image_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <LinearLayout

                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="36dp"
                    android:background="@drawable/unnamed"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/image_row"
                    app:layout_constraintEnd_toEndOf="@+id/image_row"
                    app:layout_constraintHorizontal_bias="0.85"
                    app:layout_constraintStart_toStartOf="@+id/image_row">


                    <ImageButton
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="4dp"
                        android:paddingTop="4dp"
                        android:src="@drawable/ic_comment_black_24dp"
                        tools:ignore="ContentDescription">

                    </ImageButton>

                    <TextView
                        android:id="@+id/time_published"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/published"
                        android:textColor="#fff"
                        android:textSize="16sp">

                    </TextView>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_row" />

    <TextView
        android:gravity="center"
        android:id="@+id/author_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="12dp"
        android:padding="6dp"
        android:text="@string/author"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:paddingTop="2dp"
        android:textSize="18sp"
        android:textColor="#000"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:id="@+id/time_years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:ignore="PrivateResource" />

</LinearLayout>